@@ -1,3 +1,12 @@
+2008-07-01  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Oliver Hunt.
+        
+        Optimized a[n] get and put for cases where n is an immediate unsigned
+        value.
+        
+        SunSpider says 3.5% faster.
+
 2008-07-01  Cameron Zwarich  <cwzwarich@uwaterloo.ca>
 
         Reviewed by Darin.
